# dvf

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .projections.json  Containerfile  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
hooks/: pre-commit
notebooks/: .gitignore
scripts/: allen_cahn_gauss_newton.py  babuska_aziz.py  circular_wind.py  identities.py  laplace.py  laplace_2nd_order.py  poisson_fancy_domain.py  spacetime_wave.py  stokes.py
src/: dvf.py
src/dvf/: __init__.py  _util.py  assemble.py  bc.py  domain.py  grid.py  gridfun.py  integrate.py  spaces.py
tests/: conftest.py  test_assembly.py  test_bc.py  test_differentiation.py  test_domain.py  test_function_spaces.py  test_grid.py  test_grid_function.py  test_integration.py  test_norms.py  test_shift.py  test_spaces.py
