[project]
name = "dvf"
version = "0.1.0"
description = ""
authors = [
    { name = "Marcin Łoś", email = "marcin.los.91@gmail.com"},
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.6.2",
    "ruff>=0.14.10",
]
notebooks = [
    "jupyterlab>=4.5.1",
    "jupyterlab-myst>=2.6.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.1",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"
src = [
    "src",
    "tests",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "D",     # pydoc
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "I",     # isort
]

# ignore missing docstrings
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
addopts = """
--strict-markers
--doctest-modules
"""
