[tool.poetry]
name = "dvf"
version = "0.1.0"
description = ""
authors = ["Marcin Łoś <marcin.los.91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scipy = "^1.14.1"
torch = "^2.4.1"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pre-commit = "^3.8.0"
codespell = "^2.3"
mypy = "^1.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-watcher = "^0.4.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^4.2.5"
jupyterlab-myst = "^2.4.2"
jupytext = "^1.16.4"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"

[tool.ruff]
target-version = "py311"
src = [
    "src",
    "tests",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "D",     # pydoc
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PT",    # flake8-pytest-style
    "I",     # isort
]

# ignore missing docstrings
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
# Following numpy style guide
max-doc-length = 75

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["W505"]

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
addopts = """
--strict-markers
--doctest-modules
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
